--- a/app/assets/stylesheets/videojs-matrix.css
+++ b/app/assets/stylesheets/videojs-matrix.css
@@ -12,6 +12,6 @@
 .vjs-matrix .vjs-volume-level,
 .vjs-matrix .vjs-play-progress,
 .vjs-matrix .vjs-slider-bar {
-  background: #edf;
+  background: #8E3E63;
 }
 
