--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -113,22 +113,6 @@
         </div>
       </div>
       <%=render :partial => "courses/course_content"%>
-      <!--video
-				id="default-player"
-				class="video-js vjs-default-skin vjs-big-play-centered video-js-box vjs-paused"
-				controls
-				preload="auto"
-				poster="assets/fish.jpeg"
-				data-setup='{}'>
-			<source src="uploads/DistributedFileSystems.mp4" type="video/mp4"></source>
-			<p class="vjs-no-js">
-				To view this video please enable JavaScript, and consider upgrading to a
-				web browser that
-				<a href="http://videojs.com/html5-video-support/" target="_blank">
-					supports HTML5 video
-				</a>
-			</p>
-		</video-->
     </div>
 	</div>
 
@@ -176,7 +160,7 @@ The improvement I’m referring to is returning the video to show the poster fra
 The only other thing we need to do then is to allow the user to play the video successfully again for a second time. To do this we need to add some actions for when the user plays the video. 
 */
 
-/*
+
 var _player;
 $(document).ready(function() { 
   jQuery('.dropdown').click(function(){
@@ -197,7 +181,7 @@ $(document).ready(function() {
     //_player.play();
 
     _player.on('ended', function(){
-      var videoposter = "assets/fish.jpeg";
+      var videoposter = "assets/bigfish.png";
       $('.vjs-poster').css({
         'background-image': 'url('+videoposter+')',
         'display': 'block'
@@ -217,10 +201,41 @@ $(document).ready(function() {
     _player.on('play', function(){  
       _player.posterImage.hide();  
       _player.controlBar.show();  
-      _player.bigPlayButton.hide();  
-    });  
+      _player.bigPlayButton.hide(); 
+
+			let text_tracks = _player.textTracks();
+			let cues_track;
+      /*for(let i = 0; i < text_tracks.length; i++) {
+				alert(text_tracks.length);
+				alert(text_tracks[i].label);
+				$("#activeCue_id").html("id:"+text_tracks[i].activeCues[0].id);
+				$("#activeCue_start").html("startTime:"+text_tracks[i].activeCues[0].startTime);
+				$("#activeCue_end").html("endTime:"+text_tracks[i].activeCues[0].endTime);
+				$("#activeCue_text").html("text:"+text_tracks[i].activeCues[0].text);
+			}*/
+
+      for(let i = 0; i < text_tracks.length; i++) {
+				//alert(text_tracks.length);
+			  if(text_tracks[i].label == 'Chinese') {
+			    cues_track = text_tracks[i];
+			  }
+			}
+
+			cues_track.addEventListener('cuechange', function() {
+        //activeCues take effect after video play
+				let active_cues = cues_track.activeCues;
+				let len=active_cues.length;
+			  for(let i = 0; i < len; i++) {
+					let active_cue = active_cues[i];
+			    //alert('Cue runs from ' + active_cue.startTime +' to ' + active_cue.endTime);
+				  //alert(active_cue.text);
+			  }
+			}); 
+    });   
   });  
   jQuery(".vjs-time-control.vjs-time-divider").removeClass("vjs-time-control").show();
+  //jQuery(".vjs-default-skin .vjs-volume-menu-button").addClass("clearfix").attr('style','float:right');
+  //jQuery(".vjs-default-skin .vjs-fullscreen-control").addClass("clearfix").attr('style','float:right');
 });  
 
 // Whack fullscreen
@@ -233,7 +248,6 @@ function exitFullscreen() {
     document.webkitExitFullscreen();
   }
 }
-*/
 
 </script>
 
