--- a/app/views/admin/courses/new.html.erb
+++ b/app/views/admin/courses/new.html.erb
@@ -1,1 +1,14 @@
+<div class="main">
 <h3><%=params["controller"]%></h3>
+</div>
+
+<style type="text/css">
+.main{
+  margin: 0 auto;
+  max-width: 1180px;
+  border: 1px solid #393;
+  padding: 0;
+}
+</style>
+
+
